complete chely integration explain

--- a/integration.ipynb
+++ b/integration.ipynb
@@ -10,17 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "d8331808",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import spiceypy as spy\n",
     "import pandas as pd\n",
-    "from Utils import *\n",
+    "from Utils import Geo2Rec, mag, Geo2Eclip\n",
     "import rebound as rb\n",
-    "import plotly.graph_objects as go\n",
-    "from scipy.optimize import newton\n",
+    "import numpy as np\n",
+    "from astropy.time import Time\n",
     "%load_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -284,28 +293,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "aaf0748d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangular coodinates:  [1787.29410694 3237.67768939 5207.6205527 ] 6387.197262180835\n"
+     ]
+    }
+   ],
    "source": [
-    "r = Geo2Rec(lon, lat, alt)  #en km\n",
-    "print(\"Rectangular coodinates: \", r, mag(r))\n",
-    "r_eclip = Geo2Eclip(lon, lat, alt, date=date, frame='ITRF93') #en km\n",
-    "print(\"Ecliptic Cooridnates: \", r_eclip, mag(r_eclip))\n",
+    "#we get the position vector of the site of impact in rectangular coordinates. \n",
     "\n",
-    "v = np.array([vx, vy, vz])  #en km/s\n",
+    "r = Geo2Rec(lon, lat, alt)  #en km\n",
+    "print(\"Rectangular coodinates: \", r, mag(r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6dff1525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ecliptic Cooridnates:  [ -864.77554053 -1225.75935991  6208.53977374] 6387.197262180835\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we get the position vector in ecliptic J2000 coordinares \n",
+    "\n",
+    "r_eclip = Geo2Eclip(lon, lat, alt, date=date, frame='ITRF93') #en km\n",
+    "print(\"Ecliptic Cooridnates: \", r_eclip, mag(r_eclip))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "028bb406",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True Velocity:  [ 12.56390479 -13.16966844  -2.4       ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#We need trasform observed velocity into the true velocity adding the rotarion velocity of the earth. \n",
+    " \n",
+    "v = np.array([vx, vy, vz])  \n",
     "\n",
     "t_sideral = 86164.09053083288 \n",
     "w_earth = 2 * np.pi / t_sideral \n",
-    "omega = np.array([0,0,w_earth]) #rad/s\n",
+    "omega = np.array([0,0,w_earth]) \n",
     "\n",
-    "v_E = v + spy.vcrss(omega, r) #km/s\n",
-    "#v_E, -v, mag(v_E), np.arccos((v@r_irtf)/(np.linalg.norm(v)*np.linalg.norm(r_irtf)))*180/np.pi\n",
+    "v_E = v + spy.vcrss(omega, r) \n",
+    "\n",
+    "print(\"True Velocity: \", v_E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "37df5f88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ecliptic Velocity:  [-15.59173356   7.67436382  -5.92062963]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Then we get the velocity vector in the Ecliptic J2000 frame\n",
     "\n",
     "et = spy.utc2et(date)\n",
     "mx = spy.pxform('ITRF93', 'ECLIPJ2000', et)\n",
-    "v_eclip = spy.mxv(mx, v_E)"
+    "v_eclip = spy.mxv(mx, v_E)\n",
+    "\n",
+    "print(\"Ecliptic Velocity: \", v_eclip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1e75ff53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time TDB:  2013-02-15 03:21:40.185\n",
+      "Time TDB JD:  2456338.6400484387\n",
+      "Searching NASA Horizons for 'Sun'... \n",
+      "Found: Sun (10) \n",
+      "Searching NASA Horizons for '199'... \n",
+      "Found: Mercury (199) \n",
+      "Searching NASA Horizons for '299'... \n",
+      "Found: Venus (299) \n",
+      "Searching NASA Horizons for '399'... \n",
+      "Found: Earth (399) \n",
+      "Searching NASA Horizons for '499'... \n",
+      "Found: Mars (499) \n",
+      "Searching NASA Horizons for '599'... \n",
+      "Found: Jupiter (599) \n",
+      "Searching NASA Horizons for '699'... \n",
+      "Found: Saturn (699) \n",
+      "Searching NASA Horizons for '799'... \n",
+      "Found: Uranus (799) \n",
+      "Searching NASA Horizons for '899'... \n",
+      "Found: Neptune (899) \n",
+      "Position ECLIPJ200:  [-8.24000613e-01  5.43766397e-01 -2.34564275e-05]\n",
+      "Velocity ECLIPJ200:  [-0.01879096 -0.00997261 -0.00341859]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#start the simulation adding the planets and the bolid\n",
+    "\n",
+    "rb.horizons.SSL_CONTEXT = 'unverified'\n",
+    "\n",
+    "AU = 149597870 #km\n",
+    "day = 86400\n",
+    "\n",
+    "sim = rb.Simulation()\n",
+    "sim.units = 'km', 's', 'kg'\n",
+    "sim.integrator = \"IAS15\"\n",
+    "sim.dt = -86400\n",
+    "\n",
+    "#We need the time dynamical barycenter to add the position of the planets \n",
+    "time = Time(date, format=\"iso\")\n",
+    "print(\"Time TDB: \", time.tdb)\n",
+    "print(\"Time TDB JD: \", time.tdb.jd)\n",
+    "\n",
+    "for i in [\"Sun\", \"199\", \"299\", \"399\", \"499\", \"599\", \"699\", \"799\", \"899\"]:\n",
+    "    sim.add(i, hash=f\"{i}\", date=f\"JD{time.tdb.jd}\")\n",
+    "\n",
+    "r_earth = np.array(sim.particles[\"399\"].xyz)\n",
+    "v_earth = np.array(sim.particles[\"399\"].vxyz)\n",
+    "\n",
+    "#we get the position and the velocity of chely related to the solar system barycenter \n",
+    "r_asteroid = r_eclip + r_earth \n",
+    "v_asteroid = v_eclip + v_earth \n",
+    "\n",
+    "print(\"Position ECLIPJ200: \", r_asteroid/AU)\n",
+    "print(\"Velocity ECLIPJ200: \", (v_asteroid/AU)*day)\n",
+    "\n",
+    "asteroid = sim.add(x=r_asteroid[0], y=r_asteroid[1], z=r_asteroid[2], \n",
+    "                vx=v_asteroid[0], vy=v_asteroid[1], vz=v_asteroid[2], hash=\"Chely\")"
    ]
   },
   {
